<resources>
    <string name="app_name">Meetly</string>
    <string name="app_slogan">Reuniões Simplificadas</string>
    <string name="navigation_drawer_open">Abrir navegação</string>
    <string name="navigation_drawer_close">Fechar navegação</string>
    <string name="no_account">Sem conta? Crie uma!</string>
    <string name="meeing_item_shared">Compartilhada</string>

    <!-- MENU'S  -->
    <string name="nav_app_home">Início</string>
    <string name="nav_archived">Arquivadas</string>
    <string name="nav_profile">Perfil</string>
    <string name="nav_logout">Sair</string>
    <string name="nav_header_user">User</string>
    <string name="nav_header_mail">user@mail.com</string>
    <string name="dialog_button_filter">Filtrar</string>
    <string name="dialog_filter_title">Defina um Filtro:</string>
    <string name="dialog_filter_ok">Filtrar</string>
    <string name="dialog_filter_cancel">Cancelar</string>

    <!-- ACTION MENU'S  -->
    <string name="action_menu_options">Opções</string>
    <string name="action_menu_settings">Filtrar</string>
    <string name="action_menu_refresh">Atualizar</string>
    <string name="action_menu_go_to_lastest">Ir para última</string>
    <string name="action_menu_save">Salvar</string>

    <!-- ACTIVITIES -->
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">Início</string>
    <string name="title_activity_profile">Perfil</string>
    <string name="title_activity_meeting">Criar Reunião</string>
    <string name="title_activity_view_meeting">Visualizar Reunião</string>
    <string name="title_view_archived">Arquivadas</string>

    <!-- FORMS -->
    <string name="form_email_hint">Email</string>
    <string name="form_pass_hint">Senha</string>
    <string name="form_pass_confirmation_hint">Confirme Senha</string>
    <string name="form_name_hint">Nome</string>
    <string name="form_phone_hint">Telefone (Opcional)</string>
    <string name="form_company_hint">Companhia (Opcional)</string>
    <string name="form_role_hint">Cargo (Opcional)</string>

    <string name="form_title_hint">Título</string>
    <string name="form_subject_hint">Assunto</string>
    <string name="form_guest_hint">Convidado (Opcional)</string>
    <string name="form_date_hint">Data</string>
    <string name="form_start_date_hint">Data Inicial</string>
    <string name="form_end_date_hint">Data Final</string>
    <string name="form_time_hint">Horário</string>
    <string name="form_state_hint">Estado</string>
    <string name="form_cep_hint">CEP</string>
    <string name="form_city_hint">Cidade</string>
    <string name="form_address_name_hint">Endereço</string>
    <string name="form_address_neighborhood_hint">Bairro (Opcional)</string>
    <string name="form_address_number_hint">Número (Opcional)</string>
    <string name="form_address_complement_hint">Complemento (Opcional)</string>
    <string name="form_floor_hint">Andar (Opcional)</string>
    <string name="form_room_hint">Sala (Opcional)</string>

    <!-- FORM VALIDATION -->

</resources>
