<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_app_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_app_home"
            android:checked="true"
            android:onClick="goHomeAction"/>

        <item
            android:id="@+id/nav_archived"
            android:icon="@drawable/ic_agenda"
            android:title="@string/nav_archived"
            android:onClick="goArchivedAction"/>

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/nav_profile"
            android:onClick="goProfileAction"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_logout"
            android:onClick="logoutAction"/>
    </group>-

</menu>
