<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_filter_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/md_blue_grey_800"
        android:layout_marginBottom="15dp"/>

    <!-- DATE -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:tint="@color/md_grey_700"
            android:layout_gravity="center"
            android:onClick="setDate"
            app:srcCompat="@drawable/ic_calendar"/>

        <Spinner
            android:id="@+id/dialog_date_filter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:textSize="18sp"
            android:hint="@string/form_start_date_hint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/dialog_filter_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:text="@string/dialog_filter_cancel"/>

        <TextView
            android:id="@+id/dialog_filter_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:text="@string/dialog_filter_ok"/>

    </LinearLayout>



</LinearLayout>