<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.ufba.dcc.meetly.activity.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>

        <!-- EMAIL -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/ic_mail"
                android:tint="@color/md_grey_700"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:inputType="textEmailAddress"
                android:maxLength="@integer/form_email_size"
                android:hint="@string/form_email_hint"/>
        </LinearLayout>

        <!-- PASSWORD -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/ic_lock"
                android:tint="@color/md_grey_700"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/profile_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:inputType="textPassword"
                android:maxLength="@integer/form_pass_size"
                android:hint="@string/form_pass_hint"/>
        </LinearLayout>

        <!-- PASSWORD CONFIRMATION -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/ic_lock"
                android:tint="@color/md_grey_700"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/profile_pass_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:inputType="textPassword"
                android:maxLength="@integer/form_pass_size"
                android:hint="@string/form_pass_confirmation_hint"/>
        </LinearLayout>

        <!-- NAME -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/ic_user"
                android:tint="@color/md_grey_700"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:maxLength="@integer/form_generic_size"
                android:hint="@string/form_name_hint"/>
        </LinearLayout>

        <!-- PHONE -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/ic_phone"
                android:tint="@color/md_grey_700"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/profile_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:maxLength="@integer/form_phone_size"
                android:inputType="phone"
                android:hint="@string/form_phone_hint"/>
        </LinearLayout>

        <!-- COMPANY -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/ic_factory"
                android:tint="@color/md_grey_700"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/profile_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:maxLength="@integer/form_generic_size"
                android:hint="@string/form_company_hint"/>
        </LinearLayout>

        <!-- ROLE -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/ic_chess_tower"
                android:tint="@color/md_grey_700"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/profile_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:maxLength="@integer/form_generic_size"
                android:hint="@string/form_role_hint"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>


