<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diaglo_daterange_title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/md_blue_grey_800"
        android:layout_marginBottom="15dp"/>

    <!-- DATE -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:tint="@color/md_grey_700"
            android:layout_gravity="center"
            android:onClick="setDate"
            app:srcCompat="@drawable/ic_calendar"/>

        <TextView
            android:id="@+id/dialog_start_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:onClick="setDate"
            android:textSize="18sp"
            android:hint="@string/form_start_date_hint"/>

    </LinearLayout>

    <!-- DATE -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:tint="@color/md_grey_700"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_calendar"/>

        <TextView
            android:id="@+id/dialog_end_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:textSize="18sp"
            android:hint="@string/form_end_date_hint"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/md_teal_900"
        android:textSize="17sp"
        android:text="@string/dialog_button_filter"/>


</LinearLayout>